--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,32 @@
 {
     "manifest_version": 2,
     "name": "Multi View",
-    "version": "2",
+    "version": "0.1",
     
     "icons":{
-        "32":"/image/icon.png"
+        "16":"/image/multiview_16.png",
+        "48":"/image/multiview_48.png",
+        "128":"/image/multiview_128.png"
     },
+
     "permissions":["webview", 
         "storage",
          "contextMenus",
           "alwaysOnTopWindows",
            "unlimitedStorage",
-            "browser"],
-    "description": "Test",
-
+            "browser",
+            "https://suggestqueries.google.com",
+            "<all_urls>"],
+   "content_scripts": [
+    {
+        "matches":["<all_urls>"],
+        "js": [ "thirdparty/jquery-3.5.1.min.js",
+        "thirdparty/jquery-ui.min.js"]
+    } 
+    ],
+     "content_security_policy": "script-src 'self' https://suggestqueries.google.com; object-src 'self'",
+    
+    "description": "MultiView",
     "app":{
         "background":{
             "scripts":["background.js"],
