--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,9 @@
            "unlimitedStorage",
             "browser",
             "https://suggestqueries.google.com",
-            "<all_urls>"],
+            "<all_urls>",
+            "identity"
+            ],
    "content_scripts": [
     {
         "matches":["<all_urls>"],
@@ -24,12 +26,12 @@
         "thirdparty/jquery-ui.min.js"]
     } 
     ],
-     "content_security_policy": "script-src 'self' https://suggestqueries.google.com; object-src 'self'",
+     "content_security_policy": "script-src 'self' https://suggestqueries.google.com ; object-src 'self'",
     
     "description": "MultiView",
     "app":{
         "background":{
-            "scripts":["background.js"],
+            "scripts":["thirdparty/jquery-3.5.1.min.js","thirdparty/jquery-ui.min.js","background.js"],
             "persistent":false
         }
     },
