--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,9 @@
 {
     "manifest_version": 2,
-    "name": "Multi View",
-    "version": "0.1",
+    "name": "__MSG_appName__",
+    "description": "__MSG_appDesc__",
+    "default_locale":"en",
+    "version": "0.1.3",
     
     "icons":{
         "16":"/image/multiview_16.png",
@@ -20,12 +22,11 @@
             "<all_urls>",
             "identity"
             ],   
-    "description": "MultiView",
     "app":{
         "background":{
             "scripts":["thirdparty/jquery-3.5.1.min.js","thirdparty/jquery-ui.js","background.js"],
             "persistent":false
         }
     },
-    "minimum_chrome_version":"55"
+    "minimum_chrome_version":"50"
 }
